[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtastic-repeater-telemetry-daemon"
version = "0.98.0"
dynamic = ["keywords"]
description = "A daemon for collecting and exporting Meshtastic repeater node telemetry data"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Corey DeLasaux", email = "cordelster@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "meshtastic>=2.0.0",
    "cryptography>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
]

[project.scripts]
meshmetricsd = "mesh_metricsd.meshmetricsd:main"
meshtastic-repeater-telemetry-daemon = "mesh_metricsd.meshmetricsd:main"

[project.urls]
Homepage = "https://github.com/cordelster/mesh-metrics"
Repository = "https://github.com/cordelster/mesh-metrics"
Issues = "https://github.com/cordelster/mesh-metrics/issues"
